# online-pointing-utils

./: .gitignore  .gitmodules  =1.7.0  CHANGES_SUMMARY.md  CMakeLists.txt  DISPLAY_PHYSICAL_AXES.md  FIXES_SUMMARY.md  GENERATE_ARRAYS_UPDATES.md  IMPLEMENTATION_SUMMARY.md  README.md  TOT_CHOICE.md  benchmark_cc_full.txt  benchmark_cc_output.txt  check_tot_in_file.py  countGen.C  energy_cut_scan_data.txt  evilla.cc  inspect_file.C  inspect_triggerAnaDumpTPs.C  match_efficiency_20files.txt  match_test_output.txt  notes.txt  plotTP.py  plot_avg_times.C  plot_var.C  run_cluster_display.sh  run_energy_cut_scan.sh  test_analyze.json  test_cluster.json  test_empty.json  test_single.txt  trkids.C  update_analyze_clusters.sh  view_volume_quick.py
app/: CMakeLists.txt  aggregate_clusters_within_volume.cpp  cluster_analyse.py  cluster_to_root.cpp  cluster_to_text.py  clusters_to_dataset.py  create_volume_clusters.cpp  dataset_mixer.py  group_to_root.cpp  match_clusters.cpp  plot_cluster_positions.py  superimpose_root_files.cpp  superimpose_signal_and_backgrounds.cpp
app/combine_root_files/: combine_root_files.cpp
app/group_to_root/: group_to_root.cpp  makefile
app/grouper_to_root/: grouper_to_root.cxx  groups.root
app/input-files/: cc-bkg.txt  cc.txt  es-bkg.txt  es-cc.txt  es.txt  max-bkg.txt
app/superimpose_root_files/: cpp_vector_dict.cxx  cpp_vector_dict_rdict.pcm  makefile  superimpose_root_files.cpp
bash_scripts/: clusters_to_dataset.sh  group_to_root.sh  groups_to_dataset.sh  superimpose_root_files.sh
benchmark_cc_tick3_ch2_tot3_e3/: CLUSTERING_BENCHMARK_REPORT.md
channel-maps/: README.md  channel_map_inverted.txt  channel_map_upright.txt  vdcbce_chanmap_v4.txt
cmake/: dependencies.cmake  submodules.cmake
data/: README.md  clusters_tick_limits_3_channel_limits_2_min_tps_to_cluster_2_U.root  clusters_tick_limits_3_channel_limits_2_min_tps_to_cluster_2_V.root  clusters_tick_limits_3_channel_limits_2_min_tps_to_cluster_2_X.root  test_files.txt
docs/: API_REFERENCE.md  APPS.md  BACKGROUND_ENERGY_FIX.md  CLUSTERING_EXECUTION_SUMMARY.md  CLUSTERING_FIX_SUMMARY.md  CLUSTERING_SAME_CHANNEL_FIX.md  CLUSTER_IMAGES_FORMAT.md  CLUSTER_MAIN_TRACK_SUMMARY.md  CLUSTER_REPORT_IMPROVEMENTS.md  CONFIGURATION.md  DEVELOPMENT.md  DISPLAY_PHYSICAL_AXES.md  DOCUMENTATION_SUMMARY.md  ENERGY_CUT_STUDY_RESULTS.md  FOLDER_STRUCTURE.md  FOLDER_STRUCTURE_UPDATE.md  IO_FOLDER_LOGIC.md  MAIN_CLUSTER_FEATURE.md  MATCHING_COMPLETENESS.md  MATCHING_CRITERIA_AND_HANDLING.md  MATCHING_EFFICIENCY_CURRENT.md  MATCH_CLUSTERS_IMPLEMENTATION.md  NEW_FOLDER_STRUCTURE.md  PARTIAL_MATCHING_PLAN.md  PYTHON_CPP_INTEGRATION.md  README.md  REORGANIZATION_2025-10-23.md  SIGNAL_TO_BACKGROUND_ANALYSIS.md  THRESHOLD_OPTIMIZATION_RESULTS.md  TIME_THRESHOLD_OPTIMIZATION.md  TOT_WARNING_EXPLANATION.md  TRUTH_CHAIN_SCHEMA.md  TRUTH_EMBEDDING_REFACTOR.md  VERBOSE_FLAG_SUMMARY.md  VOLUME_IMAGES.md  code-structure.md  display_script_update_summary.md  display_script_usage.md
inc/: aggregate_clusters_within_volume_libs.h  cluster.h  cluster_to_root_libs.h  group.h  group_to_root_libs.h  match_clusters_libs.h  position_calculator.h  superimpose_root_files_libs.h
job_output/: job.17832083.17.process_files_cc-from4900to5000.err  job.17832083.17.process_files_cc-from4900to5000.out  job.17832090.12.process_files_es-from4900to5000.err  job.17832090.12.process_files_es-from4900to5000.out  job.17832093.0.process_files_es-from4900to5000.err  job.17832093.0.process_files_es-from4900to5000.out  job.17832093.1.process_files_es-from4900to5000.err  (+1701 more)
json/: README.md  (+62 more)
src/ana/: CMakeLists.txt  Display.cpp  Display.h  Plotting.cpp  Plotting.h
src/app/: CMakeCache.txt  CMakeLists.txt  add_backgrounds.cpp  add_backgrounds.cpp.backup  add_backgrounds.cpp.random_slow  add_backgrounds_old.cpp  analyze_clusters.cpp  analyze_clusters.cpp.backup  analyze_clusters.cpp.backup_v2  analyze_clusters.cpp.bak2  analyze_matching.cpp  analyze_tps.cpp  backtrack.cpp  backtrack_tpstream.cpp  cluster.cpp  cluster_display.cpp  cluster_display.cpp.backup  cluster_to_root.cpp  create_volume_clusters.cpp  diagnose_timing.cpp  display.cpp  extract_calibration.cpp  extract_energy_cut_stats.cpp  make_clusters.cpp  make_clusters.cpp.backup  make_clusters.cpp.backup_v2  match_clusters.cpp  match_clusters.cpp.backup  match_clusters_truth.cpp  plot_avg_times.cpp  split_by_apa.cpp  superimpose_signal_and_backgrounds.cpp
src/app/src/: analyze_clusters.cpp  analyze_tps.cpp  backtrack.cpp  cluster.cpp  cluster_display.cpp  cluster_to_root.cpp  create_volume_clusters.cpp  extract_calibration.cpp  match_clusters.cpp  superimpose_signal_and_backgrounds.cpp
src/backtracking/: Backtracking.cpp  Backtracking.h  CMakeLists.txt
src/calculate-position/: CMakeLists.txt  position_calculator.cpp
src/calculate-position/inc/: position_calculator.h
src/clustering/: CMakeLists.txt  Clustering.cpp  Clustering.h  aggregate_clusters_within_volume_libs.cpp  cluster_new.cpp  cluster_temp.cpp  cluster_to_root_libs.cpp  cluster_to_root_libs.h
src/clustering/inc/: aggregate_clusters_within_volume_libs.h  cluster_to_root_libs.h  create_volume_clusters_libs.h  superimpose_root_files_libs.h
src/clustering/src/: aggregate_clusters_within_volume_libs.cpp  cluster_to_root_libs.cpp  create_volume_clusters_libs.cpp  superimpose_root_files_libs.cpp
src/lib/: CMakeLists.txt  Functions.cpp  Functions.h  Geometry.cpp  Geometry.h  Global.cpp  Global.h  ParametersManager.h  Utils.cpp  Utils.h  functions.cpp  functions.h  geometry.cpp  global.cpp  global.h  root.h  std.h  utils.cpp  utils.h  utils_optimized.cpp  verbosity.h
src/lib/inc/: ParametersManager.h  global.h  std.h  utils.h
src/lib/src/: ParametersManager.cpp  functions.cpp  utils.cpp
src/objects/: CMakeLists.txt  Cluster.cpp  Cluster.h  Neutrino.cpp  TriggerPrimitive.hpp  TrueParticle.cpp  TrueParticle.h  functions.cpp  functions.h
src/objects/inc/: Cluster.h  Neutrino.h  TriggerPrimitive.hpp  TrueParticle.h  cluster.h  functions.h  utils.h
src/objects/src/: Cluster.cpp  cluster.cpp  functions.cpp  utils.cpp
(+538 files in other folders)
